Fix main nav on tablet screen sizes.

--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -309,7 +309,7 @@ select:focus-visible {
 }
 
 /* Mobile Navigation Styles */
-@media (width <= 768px) {
+@media (width <= 1024px) {
     .nav {
         padding: 16px;
         display: flex;
